--- a/Move.toml
+++ b/Move.toml
@@ -7,4 +7,5 @@ AptosFramework = { local = "../../aptos-core/aptos-move/framework/aptos-framewor
 
 [addresses]
 atomic_swap = "0x1"
-
+init_user = "0x1"
+comp_user = "0x2"
